[package]
name = "rust-integration-services"
version = "0.4.1"
edition = "2024"
authors = ["Andreas Lill"]
description = "A modern, fast, and lightweight integration library written in Rust, designed for memory safety and stability."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreasLill/rust-integration-services"
readme = "README.md"
keywords = ["integration"]

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
tracing = "0.1.44"
anyhow = "1.0.101"

tokio = { version = "1.49.0", optional = true, features = ["full"] }
uuid = { version = "1.19.0", optional = true, features = ["v4"] }
bytes = { version = "1.11.1", optional = true }
hyper = { version = "1.8.1", optional = true, features = ["full"] }
hyper-util = { version = "0.1.19", optional = true, features = ["full"] }
hyper-rustls = { version = "0.27.7", optional = true }
http-body-util = { version = "0.1", optional = true }
matchit = { version = "0.9.0", optional = true }
rustls = { version = "0.23.35", optional = true }
rustls-native-certs = { version = "0.8.2", optional = true }
tokio-rustls = { version = "0.26.4", optional = true } 
webpki-roots = { version = "1.0.4", optional = true }
rustls-pki-types = { version = "1.13.1", optional = true }
regex = { version = "1.12.3", optional = true }
time = { version = "0.3.44", optional = true }
russh = { version = "0.55.0", optional = true }
russh-sftp =  { version = "2.1.1", optional = true }
lettre = { version = "0.11.19", optional = true, default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "tokio1-rustls-tls"] }
aws-sdk-s3 = { version = "1.122.0", optional = true }
aws-config = { version = "1.8.13", optional = true }
url = { version = "2.5.8", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
tracing-subscriber = "0.3.22"

[features]
default = []
full = ["file", "schedule", "sftp", "http", "smtp", "s3"]
http = ["tokio", "uuid", "hyper", "hyper-util", "hyper-rustls", "http-body-util", "tokio-rustls", "webpki-roots", "rustls", "rustls-pki-types", "rustls-native-certs", "matchit", "bytes"]
file = ["tokio", "uuid", "regex"]
schedule = ["tokio", "uuid", "time"]
sftp = ["tokio", "russh", "russh-sftp", "regex", "bytes"]
smtp = ["tokio", "lettre"]
s3 = ["tokio", "aws-sdk-s3", "aws-config", "url", "regex", "bytes"]