[package]
name = "rust-integration-services"
version = "0.5.2"
edition = "2024"
authors = ["Andreas Lill"]
description = "A modern, fast, and lightweight integration library written in Rust, designed for memory safety and stability."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreasLill/rust-integration-services"
readme = "README.md"
keywords = ["integration"]

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.3.32"
tracing = "0.1.44"
anyhow = "1.0.102"

tokio = { version = "1.49.0", optional = true, features = ["full"] }
bytes = { version = "1.11.1", optional = true }
hyper = { version = "1.8.1", optional = true, features = ["full"] }
hyper-util = { version = "0.1.20", optional = true, features = ["full"] }
hyper-rustls = { version = "0.27.7", optional = true }
http-body-util = { version = "0.1", optional = true }
matchit = { version = "0.9.1", optional = true }
rustls = { version = "0.23.36", optional = true, features = ["ring"] }
rustls-native-certs = { version = "0.8.3", optional = true }
tokio-rustls = { version = "0.26.4", optional = true } 
webpki-roots = { version = "1.0.6", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
regex = { version = "1.12.3", optional = true }
time = { version = "0.3.47", optional = true }
russh = { version = "0.57.0", optional = true }
russh-sftp =  { version = "2.1.1", optional = true }
lettre = { version = "0.11.19", optional = true, default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "tokio1-rustls-tls"] }
aws-sdk-s3 = { version = "1.122.0", optional = true }
aws-config = { version = "1.8.13", optional = true }
url = { version = "2.5.8", optional = true }

[dev-dependencies]
tokio-test = "0.4.5"
tracing-subscriber = "0.3.22"

[features]
default = ["http"]
full = ["file", "scheduler", "sftp", "http", "smtp", "s3"]
http = ["tokio", "hyper", "hyper-util", "hyper-rustls", "http-body-util", "tokio-rustls", "webpki-roots", "rustls", "rustls-pki-types", "rustls-native-certs", "matchit", "bytes"]
file = ["tokio", "regex"]
scheduler = ["tokio", "time"]
sftp = ["tokio", "russh", "russh-sftp", "regex", "bytes"]
smtp = ["tokio", "lettre"]
s3 = ["tokio", "aws-sdk-s3", "aws-config", "url", "regex", "bytes"]