[package]
name = "rust-integration-services"
version = "0.5.15"
edition = "2024"
authors = ["Andreas Lill"]
description = "A modern, fast, and lightweight integration library written in Rust, designed for memory safety and stability."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreasLill/rust-integration-services"
readme = "README.md"
keywords = ["integration"]

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
tracing = "0.1.44"
anyhow = "1.0.102"

tokio = { version = "1.51.0", optional = true, features = ["full"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
hyper = { version = "1.9.0", optional = true, features = ["full"] }
hyper-util = { version = "0.1.20", optional = true, features = ["full"] }
hyper-rustls = { version = "0.27.7", optional = true }
http-body = { version = "1.0.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
matchit = { version = "0.9.1", optional = true }
rustls = { version = "0.23.37", optional = true, features = ["ring"] }
rustls-native-certs = { version = "0.8.3", optional = true }
tokio-rustls = { version = "0.26.4", optional = true } 
webpki-roots = { version = "1.0.6", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
regex = { version = "1.12.3", optional = true }
time = { version = "0.3.47", optional = true }
russh = { version = "0.57.0", optional = true }
russh-sftp =  { version = "2.1.1", optional = true }
lettre = { version = "0.11.19", optional = true, default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "tokio1-rustls-tls"] }
aws-sdk-s3 = { version = "1.128.0", optional = true, default-features = false, features = ["rustls", "rt-tokio"] }
aws-config = { version = "1.8.15", optional = true, default-features = false, features = ["rustls", "rt-tokio"] }

[dev-dependencies]
tokio-test = "0.4.5"
tracing-subscriber = "0.3.23"

[features]
default = []
full = ["file", "scheduler", "sftp", "http", "smtp", "s3"]
http = ["tokio", "hyper", "hyper-util", "hyper-rustls", "http-body-util", "tokio-rustls", "webpki-roots", "rustls", "rustls-pki-types", "rustls-native-certs", "matchit"]
file = ["tokio", "tokio-util"]
scheduler = ["tokio", "time"]
sftp = ["tokio", "russh", "russh-sftp", "regex"]
smtp = ["tokio", "lettre"]
s3 = ["tokio", "tokio-util", "aws-sdk-s3", "aws-config", "regex", "http-body", "http-body-util"]